// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should not fail if current route does not exist 1`] = `
<div
  class="root"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          Sulu
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      >
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-webspace"
              class="su-webspace"
            />
            Webspaces
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-image"
              class="su-image"
            />
            Medias
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="fa-sticky-note-o"
              class="fa fa-sticky-note-o"
            />
            Snippets
          </div>
        </div>
        <div
          class="item hasChildren"
        >
          <div
            class="title"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
            Contacts
          </div>
          <span
            aria-label="su-arrow-right"
            class="childrenIndicator su-arrow-right clickable"
            role="button"
            tabindex="0"
          />
        </div>
        <div
          class="item hasChildren"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-settings"
              class="su-settings"
            />
            Settings
          </div>
          <span
            aria-label="su-arrow-right"
            class="childrenIndicator su-arrow-right clickable"
            role="button"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <nav
        class="toolbar light"
      >
        <div
          class="controls light"
        >
          <button
            class="button light primary"
          >
            <span
              aria-label="su-menu"
              class="icon su-menu"
            />
          </button>
        </div>
        <div
          class="controls light"
        />
      </nav>
    </header>
    <main
      class="main"
    />
  </div>
</div>
`;

exports[`Application should render based on current route 1`] = `
<div
  class="root"
>
  <nav
    class="navigation"
  >
    <div
      class="navigation"
    >
      <div
        class="header"
      >
        <div
          class="headerContent"
        >
          Sulu
        </div>
      </div>
      <div
        class="user"
      >
        <div
          class="userContent"
        >
          <div
            class="noUserImage"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
          </div>
          <div
            class="userProfile"
          >
            <span>
              Hikaru Sulu
            </span>
            <button>
              <span
                aria-label="su-exit"
                class="su-exit"
              />
              Log out
            </button>
          </div>
        </div>
      </div>
      <div
        class="items"
      >
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-webspace"
              class="su-webspace"
            />
            Webspaces
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-image"
              class="su-image"
            />
            Medias
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="title"
          >
            <span
              aria-label="fa-sticky-note-o"
              class="fa fa-sticky-note-o"
            />
            Snippets
          </div>
        </div>
        <div
          class="item hasChildren"
        >
          <div
            class="title"
          >
            <span
              aria-label="fa-user"
              class="fa fa-user"
            />
            Contacts
          </div>
          <span
            aria-label="su-arrow-right"
            class="childrenIndicator su-arrow-right clickable"
            role="button"
            tabindex="0"
          />
        </div>
        <div
          class="item hasChildren"
        >
          <div
            class="title"
          >
            <span
              aria-label="su-settings"
              class="su-settings"
            />
            Settings
          </div>
          <span
            aria-label="su-arrow-right"
            class="childrenIndicator su-arrow-right clickable"
            role="button"
            tabindex="0"
          />
        </div>
      </div>
      <div
        class="versions"
      >
        <div>
          Sulu (
          <a
            href="https://github.com/sulu/sulu/releases"
            target="_blank"
          >
            2.0.0-RC1
          </a>
          )
        </div>
      </div>
    </div>
  </nav>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <nav
        class="toolbar light"
      >
        <div
          class="controls light"
        >
          <button
            class="button light primary"
          >
            <span
              aria-label="su-menu"
              class="icon su-menu"
            />
          </button>
        </div>
        <div
          class="controls light"
        />
      </nav>
    </header>
    <main
      class="main"
    >
      <div>
        <h1>
          Test
        </h1>
        <h2>
          test
        </h2>
      </div>
    </main>
  </div>
</div>
`;

exports[`Application should render opened navigation 1`] = `
<Application
  router={
    Object {
      "route": Object {
        "attributeDefaults": Object {},
        "children": Array [],
        "name": "test",
        "options": Object {},
        "parent": null,
        "path": "/webspaces",
        "rerenderAttributes": Array [],
        "view": "test",
      },
    }
  }
>
  <div
    className="root navigationVisible"
  >
    <nav
      className="navigation"
    >
      <Navigation
        onLogoutClick={[Function]}
        onProfileClick={[Function]}
        suluVersion="2.0.0-RC1"
        suluVersionLink="https://github.com/sulu/sulu/releases"
        title="Sulu"
        username="Hikaru Sulu"
      >
        <div
          className="navigation"
        >
          <div
            className="header"
          >
            <div
              className="headerContent"
            >
              Sulu
            </div>
          </div>
          <div
            className="user"
          >
            <div
              className="userContent"
            >
              <div
                className="noUserImage"
                onClick={[Function]}
              >
                <Icon
                  name="fa-user"
                >
                  <span
                    aria-label="fa-user"
                    className="fa fa-user"
                  />
                </Icon>
              </div>
              <div
                className="userProfile"
              >
                <span
                  onClick={[Function]}
                >
                  Hikaru Sulu
                </span>
                <button
                  onClick={[Function]}
                >
                  <Icon
                    name="su-exit"
                  >
                    <span
                      aria-label="su-exit"
                      className="su-exit"
                    />
                  </Icon>
                  Log out
                </button>
              </div>
            </div>
          </div>
          <div
            className="items"
          >
            <Item
              active={false}
              expanded={false}
              icon="su-webspace"
              key=".$sulu_content.webspaces"
              onClick={[Function]}
              title="Webspaces"
              value="sulu_content.webspaces"
            >
              <div
                className="item"
              >
                <div
                  className="title"
                  onClick={[Function]}
                >
                  <Icon
                    name="su-webspace"
                  >
                    <span
                      aria-label="su-webspace"
                      className="su-webspace"
                    />
                  </Icon>
                  Webspaces
                </div>
              </div>
            </Item>
            <Item
              active={false}
              expanded={false}
              icon="su-image"
              key=".$sulu_media.overview"
              onClick={[Function]}
              title="Medias"
              value="sulu_media.overview"
            >
              <div
                className="item"
              >
                <div
                  className="title"
                  onClick={[Function]}
                >
                  <Icon
                    name="su-image"
                  >
                    <span
                      aria-label="su-image"
                      className="su-image"
                    />
                  </Icon>
                  Medias
                </div>
              </div>
            </Item>
            <Item
              active={false}
              expanded={false}
              icon="fa-sticky-note-o"
              key=".$sulu_snippet.list"
              onClick={[Function]}
              title="Snippets"
              value="sulu_snippet.list"
            >
              <div
                className="item"
              >
                <div
                  className="title"
                  onClick={[Function]}
                >
                  <Icon
                    name="fa-sticky-note-o"
                  >
                    <span
                      aria-label="fa-sticky-note-o"
                      className="fa fa-sticky-note-o"
                    />
                  </Icon>
                  Snippets
                </div>
              </div>
            </Item>
            <Item
              active={false}
              expanded={false}
              icon="fa-user"
              key=".$contacts"
              onClick={[Function]}
              title="Contacts"
              value="contacts"
            >
              <div
                className="item hasChildren"
              >
                <div
                  className="title"
                  onClick={[Function]}
                >
                  <Icon
                    name="fa-user"
                  >
                    <span
                      aria-label="fa-user"
                      className="fa fa-user"
                    />
                  </Icon>
                  Contacts
                </div>
                <Icon
                  className="childrenIndicator"
                  name="su-arrow-right"
                  onClick={[Function]}
                >
                  <span
                    aria-label="su-arrow-right"
                    className="childrenIndicator su-arrow-right clickable"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                </Icon>
              </div>
            </Item>
            <Item
              active={false}
              expanded={false}
              icon="su-settings"
              key=".$settings"
              onClick={[Function]}
              title="Settings"
              value="settings"
            >
              <div
                className="item hasChildren"
              >
                <div
                  className="title"
                  onClick={[Function]}
                >
                  <Icon
                    name="su-settings"
                  >
                    <span
                      aria-label="su-settings"
                      className="su-settings"
                    />
                  </Icon>
                  Settings
                </div>
                <Icon
                  className="childrenIndicator"
                  name="su-arrow-right"
                  onClick={[Function]}
                >
                  <span
                    aria-label="su-arrow-right"
                    className="childrenIndicator su-arrow-right clickable"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  />
                </Icon>
              </div>
            </Item>
          </div>
          <div
            className="versions"
          >
            <div>
              Sulu (
              <a
                href="https://github.com/sulu/sulu/releases"
                target="_blank"
              >
                2.0.0-RC1
              </a>
              )
            </div>
          </div>
        </div>
      </Navigation>
    </nav>
    <div
      className="content"
    >
      <Backdrop
        fixed={false}
        local={true}
        onClick={[Function]}
        open={true}
        visible={false}
      >
        <div
          className="backdrop"
          onClick={[Function]}
        />
      </Backdrop>
      <header
        className="header"
      >
        <Toolbar
          navigationOpen={true}
          onNavigationButtonClick={[Function]}
        >
          <Toolbar
            skin="light"
          >
            <nav
              className="toolbar light"
            >
              <Controls
                key=".0"
                skin="light"
              >
                <div
                  className="controls light"
                >
                  <Button
                    active={false}
                    disabled={false}
                    hasOptions={false}
                    icon="su-x"
                    key=".0"
                    onClick={[Function]}
                    primary={true}
                    skin="light"
                  >
                    <button
                      className="button light primary"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <Icon
                        className="icon"
                        name="su-x"
                      >
                        <span
                          aria-label="su-x"
                          className="icon su-x"
                        />
                      </Icon>
                    </button>
                  </Button>
                </div>
              </Controls>
              <Controls
                key=".1"
                skin="light"
              >
                <div
                  className="controls light"
                />
              </Controls>
            </nav>
          </Toolbar>
        </Toolbar>
      </header>
      <main
        className="main"
      >
        <Test
          key="test"
          router={
            Object {
              "route": Object {
                "attributeDefaults": Object {},
                "children": Array [],
                "name": "test",
                "options": Object {},
                "parent": null,
                "path": "/webspaces",
                "rerenderAttributes": Array [],
                "view": "test",
              },
            }
          }
        >
          <div>
            <h1>
              Test
            </h1>
            <h2>
              test
            </h2>
          </div>
        </Test>
      </main>
    </div>
  </div>
</Application>
`;
